plugins {
    id 'java'
    id 'war'
}

group 'com.workit'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
    springVersion = '5.3.37'
    jacksonVersion = '2.14.2'
    lombokVersion = '1.18.30'
    hikariVersion = '4.0.3'
    aspectjVersion = '1.9.20'
    mybatisVersion = '3.5.10'
    log4j2Version = '2.18.0'
    springDataRedisVersion = '2.7.18'
    lettuceVersion = '6.2.7.RELEASE'
    springSecurityVersion = '5.7.11'
    jjwtVersion = '0.11.5'
    poiVersion = '5.2.5'
    openpdfVersion = '1.3.30'
}

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    // Servlet / JSP / JSTL
    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
    // MockMvc Controller 테스트 시 servlet API 필요 (메인 코드 영향 없음, 동일 버전 재사용)
    testImplementation('javax.servlet:javax.servlet-api:4.0.1')
    implementation('javax.servlet.jsp:javax.servlet.jsp-api:2.3.3')
    implementation('javax.servlet:jstl:1.2')

    // Spring Framework
    implementation("org.springframework:spring-context:${springVersion}")
    implementation("org.springframework:spring-webmvc:${springVersion}")
    implementation("org.springframework:spring-jdbc:${springVersion}")
    implementation("org.springframework:spring-tx:${springVersion}")
    implementation("org.springframework:spring-aop:${springVersion}")
    implementation("org.springframework:spring-test:${springVersion}")

    // AOP (AspectJ)
    implementation("org.aspectj:aspectjweaver:${aspectjVersion}")
    implementation("org.aspectj:aspectjrt:${aspectjVersion}")

    // MyBatis
    implementation("org.mybatis:mybatis:${mybatisVersion}")
    implementation("org.mybatis:mybatis-spring:2.1.1")

    // HikariCP
    implementation("com.zaxxer:HikariCP:${hikariVersion}")

    // Spring Data Redis (Lettuce 클라이언트)
    implementation("org.springframework.data:spring-data-redis:${springDataRedisVersion}")
    implementation("io.lettuce:lettuce-core:${lettuceVersion}")

    // Spring Security Crypto (BCrypt - 비밀번호/PIN 단방향 해시)
    implementation("org.springframework.security:spring-security-crypto:${springSecurityVersion}")

    // Spring Security (인증 계층 - JWT 필터 체인, SecurityContext 관리)
    // - web: 필터 체인/인증 진입점, config: @EnableWebSecurity/SecurityFilterChain
    implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
    // 테스트에서 MockMvc 보안 필터 적용(springSecurity()) 및 인증 객체 사용 시 필요
    testImplementation("org.springframework.security:spring-security-test:${springSecurityVersion}")

    // JWT (jjwt)
    implementation("io.jsonwebtoken:jjwt-api:${jjwtVersion}")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:${jjwtVersion}")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:${jjwtVersion}")

    // Jackson
    implementation("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
    implementation("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
    implementation("com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}")

    // Log4j2
    implementation("org.apache.logging.log4j:log4j-api:${log4j2Version}")
    implementation("org.apache.logging.log4j:log4j-core:${log4j2Version}")
    implementation("org.apache.logging.log4j:log4j-slf4j-impl:${log4j2Version}")

    // Lombok
    compileOnly("org.projectlombok:lombok:${lombokVersion}")
    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
    testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")

    // Apache POI - 정산 내역 Excel 다운로드
    implementation("org.apache.poi:poi-ooxml:${poiVersion}")

    // OpenPDF - 지출 상세내역 PDF 다운로드
    // fonts-extra 는 PDF 에 한글을 출력하기 위한 CJK 폰트 지원
    implementation("com.github.librepdf:openpdf:${openpdfVersion}")
    implementation("com.github.librepdf:openpdf-fonts-extra:${openpdfVersion}")

    // MySQL 드라이버
    runtimeOnly('mysql:mysql-connector-java:8.0.33')

    // JUnit
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    // Mockito - 수동 Stub/Fake 를 대체하는 단위 테스트 목 프레임워크 (JDK 8+ 호환)
    testImplementation("org.mockito:mockito-core:4.11.0")
    testImplementation("org.mockito:mockito-junit-jupiter:4.11.0")
}

test {
    useJUnitPlatform()
}
